--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "exponent": "^10.0.0",
     "react": "~15.3.2",
     "react-native": "github:exponentjs/react-native#sdk-10.1.2",
-    "react-native-swiper": "^1.5.1"
+    "react-native-swiper": "^1.5.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   }
 }
