--- a/package.json
+++ b/package.json
@@ -5,16 +5,27 @@
   "author": null,
   "private": true,
   "main": "main.js",
+  "scripts": {
+    "test": "mocha --compilers js:babel-core/register"
+  },
   "dependencies": {
     "@exponent/ex-navigation": "^1.6.0",
     "@exponent/samples": "^1.0.2",
     "@exponent/vector-icons": "^1.0.1",
     "exponent": "^10.0.0",
+    "immutable": "^3.8.1",
     "react": "~15.3.2",
     "react-native": "github:exponentjs/react-native#sdk-10.1.2",
     "react-native-swiper": "^1.5.1",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-preset-react-native": "^1.9.0",
+    "chai": "^3.5.0",
+    "chai-immutable": "^1.6.0",
+    "mocha": "^3.1.2"
   }
 }
