--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-swiper": "^1.5.1",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-immutable": "^3.0.8",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
