--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@exponent/vector-icons": "^1.0.1",
     "exponent": "^10.0.0",
     "immutable": "^3.8.1",
+    "lodash": "^4.16.4",
     "react": "~15.3.2",
     "react-native": "github:exponentjs/react-native#sdk-10.1.2",
+    "react-native-animatable": "^0.6.1",
     "react-native-swiper": "^1.5.1",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
