--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-immutable": "^3.0.8",
     "redux-persist": "4.0.0-alpha6",
     "redux-persist-transform-immutable": "^4.1.0",
+    "redux-persist-immutable": "^4.0.1",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
